event clip fail smart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
 importFrom(data.table,setkeyv)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
