event clips wokr on study  map folder separately

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ importFrom(dplyr,n_distinct)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(gam,gam)
 importFrom(gam,predict.Gam)
 importFrom(gam,s)
