new way of doing recordings and updated event clipper and file updater to go along with it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(addCalibration)
 export(addDatabase)
 export(addFunction)
 export(addGps)
+export(addRecordings)
 export(ancillary)
 export(applyCalibration)
 export(calculateICI)
