--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ importFrom(seewave,spec)
 importFrom(signal,specgram)
 importFrom(stats,approx)
 importFrom(stats,density)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,sd)
