addGps now calls addPgGps if you have no gps data in your db

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ exportMethods(settings)
 exportMethods(species)
 import(dplyr)
 importClassesFrom(data.table,data.table)
+importFrom(PAMmisc,addPgGps)
 importFrom(PAMmisc,peakTrough)
 importFrom(PAMmisc,squishList)
 importFrom(PAMmisc,wignerTransform)
