--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(addGps)
 export(addRecordings)
 export(ancillary)
 export(applyCalibration)
+export(calculateAverageSpectra)
 export(calculateICI)
 export(checkStudy)
 export(detectors)
@@ -137,6 +138,9 @@ importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
+importFrom(graphics,axis)
+importFrom(graphics,image)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,title)
 importFrom(knitr,kable)
@@ -158,9 +162,11 @@ importFrom(rlang,quos)
 importFrom(seewave,TKEO)
 importFrom(seewave,bwfilter)
 importFrom(seewave,spec)
+importFrom(signal,hanning)
 importFrom(signal,specgram)
 importFrom(stats,approx)
 importFrom(stats,density)
+importFrom(stats,fft)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
