--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(standardCepstrumCalcs)
 export(standardClickCalcs)
 export(updateFiles)
 export(writeEventClips)
+export(writeWignerData)
 exportClasses(AcousticEvent)
 exportClasses(AcousticStudy)
 exportClasses(PAMpalSettings)
@@ -156,6 +157,12 @@ importFrom(purrr,transpose)
 importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,read_csv)
+importFrom(reticulate,import)
+importFrom(reticulate,install_miniconda)
+importFrom(reticulate,np_array)
+importFrom(reticulate,py_available)
+importFrom(reticulate,py_install)
+importFrom(reticulate,py_module_available)
 importFrom(rlang,as_label)
 importFrom(rlang,parse_expr)
 importFrom(rlang,quos)
@@ -190,6 +197,7 @@ importFrom(utils,read.csv)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,str)
 importFrom(utils,txtProgressBar)
+importFrom(utils,write.csv)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_find_all)
 importMethodsFrom(PAMmisc,matchEnvData)
