fixes for filtering and adjustments for getting binaries. updates for website.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,11 @@ export(events)
 export(export_banter)
 export(files)
 export(getBinaryData)
+export(getCepstrumData)
+export(getClickData)
 export(getDetectorData)
+export(getICI)
+export(getWhistleData)
 export(gps)
 export(id)
 export(is.AcousticEvent)
