--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,10 @@ Authors@R: c(
   SB = person("Simone", "Baumann-Pickering", role = c("ctb")),
   JO = person("Julie", "Oswald", role = c("ctb")))
 Maintainer: Taiki Sakai <taiki.sakai@noaa.gov>
-Description: A package for loading and processing passive acoustic data.
-    This package contains tools for loading in data from 'Pamguard' 
-    (<https://www.pamguard.org/>), applying various processing functions 
-    to this data, and for exporting data for reports or external modeling tools.
-    Parameter calculations implement methods by Oswald et al (2007) <doi:10.1121/1.2743157>,
+Description: Tools for loading and processing passive acoustic data. Read in data
+    that has been processed in 'Pamguard' (<https://www.pamguard.org/>), apply a suite
+    processing functions, and export data for reports or external modeling tools. Parameter 
+    calculations implement methods by Oswald et al (2007) <doi:10.1121/1.2743157>,
     Griffiths et al (2020) <doi:10.1121/10.0001229> and Baumann-Pickering et al (2010)
     <doi:10.1121/1.3479549>.
 License: GNU General Public License
