--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,8 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(fftw,FFT)
+importFrom(fftw,planFFT)
 importFrom(gam,gam)
 importFrom(gam,predict.Gam)
 importFrom(gam,s)
