--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     xml2,
     rjson,
     rlang,
-    reticulate
+    reticulate,
+    lubridate
 RoxygenNote: 7.1.1
 Suggests: 
     testthat
