--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,title)
 importFrom(knitr,kable)
+importFrom(lubridate,parse_date_time)
 importFrom(magrittr,"%>%")
 importFrom(manipulate,manipulate)
 importFrom(methods,new)
