av spec updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,8 @@ importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
 importFrom(graphics,axis)
 importFrom(graphics,image)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,title)
