--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(is.PAMpalSettings)
 export(localizations)
 export(models)
 export(plotDataExplorer)
+export(plotGram)
 export(plotSpectrogram)
 export(plotWaveform)
 export(plotWigner)
@@ -143,6 +144,7 @@ importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
+importFrom(grDevices,gray.colors)
 importFrom(graphics,axis)
 importFrom(graphics,image)
 importFrom(graphics,legend)
