--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@
 language: R
 cache: packages
 warnings_are_errors: false
+sudo: required
+before_install:
+  sudo apt-get install -y gdal-bin
 addons:
   apt:
     packages:
     - libnetcdf-dev
     - libgdal-dev
+    - libproj-dev
