--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,points)
 importFrom(graphics,title)
 importFrom(knitr,kable)
 importFrom(lubridate,parse_date_time)
@@ -195,6 +196,7 @@ importFrom(tidyr,spread)
 importFrom(tuneR,MCnames)
 importFrom(tuneR,WaveMC)
 importFrom(tuneR,bind)
+importFrom(tuneR,downsample)
 importFrom(tuneR,readWave)
 importFrom(tuneR,writeWave)
 importFrom(utils,.DollarNames)
