XML settings first try

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(addDatabase)
 export(addFunction)
 export(addGps)
 export(addRecordings)
+export(addSettings)
 export(ancillary)
 export(applyCalibration)
 export(calculateAverageSpectra)
@@ -45,6 +46,7 @@ export(id)
 export(is.AcousticEvent)
 export(is.AcousticStudy)
 export(is.PAMpalSettings)
+export(loadPamguardXML)
 export(localizations)
 export(models)
 export(plotDataExplorer)
@@ -58,6 +60,7 @@ export(removeBinaries)
 export(removeCalibration)
 export(removeDatabase)
 export(removeFunction)
+export(removeSettings)
 export(roccaWhistleCalcs)
 export(setSpecies)
 export(settings)
@@ -65,6 +68,7 @@ export(species)
 export(standardCepstrumCalcs)
 export(standardClickCalcs)
 export(updateFiles)
+export(updatePamObject)
 export(writeEventClips)
 export(writeWignerData)
 exportClasses(AcousticEvent)
@@ -210,5 +214,9 @@ importFrom(utils,str)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(xml2,read_xml)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_attrs)
+importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_name)
 importMethodsFrom(PAMmisc,matchEnvData)
