warning capturing functions added, added startup message to warn about S4 changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(getCepstrumData)
 export(getClickData)
 export(getDetectorData)
 export(getICI)
+export(getWarnings)
 export(getWhistleData)
 export(gps)
 export(id)
