add hydrophone depth function added and automatically read target motion for events

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(addCalibration)
 export(addDatabase)
 export(addFunction)
 export(addGps)
+export(addHydrophoneDepth)
 export(addRecordings)
 export(addSettings)
 export(ancillary)
@@ -123,6 +124,7 @@ importFrom(RSQLite,dbDisconnect)
 importFrom(RSQLite,dbListTables)
 importFrom(RSQLite,dbReadTable)
 importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,key)
 importFrom(data.table,rbindlist)
