filter by detector name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ importFrom(rlang,quos)
 importFrom(seewave,TKEO)
 importFrom(seewave,bwfilter)
 importFrom(seewave,spec)
+importFrom(signal,decimate)
 importFrom(signal,hanning)
 importFrom(signal,specgram)
 importFrom(stats,approx)
