av spec updates to do cepstrum and decimating. DGL bug fixes. click calcs label change on bad units

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ importFrom(PamBinaries,loadPamguardBinaryFile)
 importFrom(RSQLite,SQLite)
 importFrom(RSQLite,dbConnect)
 importFrom(RSQLite,dbDisconnect)
+importFrom(RSQLite,dbListFields)
 importFrom(RSQLite,dbListTables)
 importFrom(RSQLite,dbReadTable)
 importFrom(data.table,":=")
