avg spec display stuff mo betta

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
 importFrom(grDevices,gray.colors)
+importFrom(grDevices,hcl.colors)
 importFrom(graphics,axis)
 importFrom(graphics,image)
 importFrom(graphics,legend)
