--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ cache: packages
 warnings_are_errors: false
 sudo: required
 
+os: linux
+arch:
+  - arm64
+  - ppc64le
+  - s390x
+  
 addons:
   apt:
     packages:
