--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,9 @@ export(getBinaryData)
 export(getCepstrumData)
 export(getClickData)
 export(getDetectorData)
+export(getGPLData)
 export(getICI)
+export(getMeasures)
 export(getWarnings)
 export(getWhistleData)
 export(gps)
@@ -164,7 +166,6 @@ importFrom(graphics,points)
 importFrom(graphics,title)
 importFrom(knitr,kable)
 importFrom(lubridate,parse_date_time)
-importFrom(magrittr,"%>%")
 importFrom(manipulate,manipulate)
 importFrom(methods,new)
 importFrom(methods,setGeneric)
@@ -173,9 +174,6 @@ importFrom(methods,validObject)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
 importFrom(purrr,transpose)
-importFrom(readr,col_character)
-importFrom(readr,cols)
-importFrom(readr,read_csv)
 importFrom(reticulate,import)
 importFrom(reticulate,install_miniconda)
 importFrom(reticulate,np_array)
