adding nDetections functions, fixing missing sound problems, other stuff whatever its friday

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,11 @@ export(is.PAMpalSettings)
 export(loadPamguardXML)
 export(localizations)
 export(models)
+export(nCepstrum)
+export(nClicks)
+export(nDetections)
+export(nGPL)
+export(nWhistles)
 export(plotDataExplorer)
 export(plotGram)
 export(plotSpectrogram)
