bindStudies added, getICI changed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(addRecordings)
 export(addSettings)
 export(ancillary)
 export(applyCalibration)
+export(bindStudies)
 export(calculateAverageSpectra)
 export(calculateICI)
 export(checkStudy)
@@ -176,6 +177,7 @@ importFrom(methods,new)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,validObject)
+importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
 importFrom(purrr,transpose)
@@ -186,6 +188,7 @@ importFrom(reticulate,py_available)
 importFrom(reticulate,py_install)
 importFrom(reticulate,py_module_available)
 importFrom(rlang,as_label)
+importFrom(rlang,list2)
 importFrom(rlang,parse_expr)
 importFrom(rlang,quos)
 importFrom(seewave,TKEO)
