--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ LazyData: true
 Depends: 
     R (>= 3.5.0),
     PamBinaries (>= 1.3.0),
-    PAMmisc,
+    PAMmisc (>= 1.8.3),
     dplyr
 Imports:
     tuneR,
@@ -43,8 +43,6 @@ Imports:
     rlang,
     reticulate,
     lubridate
-Remotes:
-    TaikiSan21/PAMmisc
 RoxygenNote: 7.1.2
 Suggests: 
     testthat
