--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(files)
 export(getBinaryData)
 export(getCepstrumData)
 export(getClickData)
+export(getClipData)
 export(getDetectorData)
 export(getGPLData)
 export(getICI)
