adding note functionality and more filter speeds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(addDatabase)
 export(addFunction)
 export(addGps)
 export(addHydrophoneDepth)
+export(addNote)
 export(addRecordings)
 export(addSettings)
 export(ancillary)
@@ -45,6 +46,7 @@ export(getDetectorData)
 export(getGPLData)
 export(getICI)
 export(getMeasures)
+export(getNotes)
 export(getWarnings)
 export(getWhistleData)
 export(gps)
@@ -71,6 +73,7 @@ export(removeBinaries)
 export(removeCalibration)
 export(removeDatabase)
 export(removeFunction)
+export(removeNote)
 export(removeSettings)
 export(roccaWhistleCalcs)
 export(setSpecies)
