just doing interp for non-NA values on addGps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,6 +202,7 @@ importFrom(signal,decimate)
 importFrom(signal,hanning)
 importFrom(signal,specgram)
 importFrom(stats,approx)
+importFrom(stats,approxfun)
 importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,lm)
