--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,9 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,title)
 importFrom(knitr,kable)
+importFrom(lubridate,"%within%")
+importFrom(lubridate,int_overlaps)
+importFrom(lubridate,interval)
 importFrom(lubridate,parse_date_time)
 importFrom(manipulate,manipulate)
 importFrom(methods,new)
