--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,8 +175,8 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,title)
 importFrom(knitr,kable)
-importFrom(lubridate,"%within%")
 importFrom(lubridate,int_overlaps)
+importFrom(lubridate,int_standardize)
 importFrom(lubridate,interval)
 importFrom(lubridate,parse_date_time)
 importFrom(manipulate,manipulate)
