adding annotation functions and explicit join styles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export("pps<-")
 export("settings<-")
 export("species<-")
 export(PAMpalSettings)
+export(addAnnotation)
 export(addBinaries)
 export(addCalibration)
 export(addDatabase)
@@ -32,12 +33,15 @@ export(applyCalibration)
 export(bindStudies)
 export(calculateAverageSpectra)
 export(calculateICI)
+export(checkAnnotation)
 export(checkStudy)
 export(detectors)
 export(effort)
 export(events)
+export(export_annomate)
 export(export_banter)
 export(files)
+export(getAnnotation)
 export(getBinaryData)
 export(getCepstrumData)
 export(getClickData)
@@ -56,18 +60,21 @@ export(is.AcousticStudy)
 export(is.PAMpalSettings)
 export(loadPamguardXML)
 export(localizations)
+export(matchRecordingUrl)
 export(models)
 export(nCepstrum)
 export(nClicks)
 export(nDetections)
 export(nGPL)
 export(nWhistles)
+export(parseEventClipName)
 export(plotDataExplorer)
 export(plotGram)
 export(plotSpectrogram)
 export(plotWaveform)
 export(plotWigner)
 export(pps)
+export(prepAnnotation)
 export(processPgDetections)
 export(removeBinaries)
 export(removeCalibration)
@@ -149,6 +156,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
