--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ importFrom(dplyr,ungroup)
 importFrom(gam,gam)
 importFrom(gam,predict.Gam)
 importFrom(gam,s)
+importFrom(geosphere,distGeo)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
