--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,8 @@
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+      theme: "default"
 theme: jekyll-theme-leap-day
