--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(is.PAMpalSettings)
 export(loadPamguardXML)
 export(localizations)
 export(matchRecordingUrl)
+export(matchTimeData)
 export(models)
 export(nCepstrum)
 export(nClicks)
