--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(is.AcousticStudy)
 export(is.PAMpalSettings)
 export(loadPamguardXML)
 export(localizations)
+export(markAnnotated)
 export(matchRecordingUrl)
 export(matchTimeData)
 export(models)
@@ -133,6 +134,7 @@ import(dplyr)
 importClassesFrom(data.table,data.table)
 importFrom(PAMmisc,addPgGps)
 importFrom(PAMmisc,peakTrough)
+importFrom(PAMmisc,readSpecAnno)
 importFrom(PAMmisc,squishList)
 importFrom(PAMmisc,wignerTransform)
 importFrom(PamBinaries,contourToFreq)
