--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(addAnnotation)
 export(addBinaries)
 export(addCalibration)
 export(addDatabase)
+export(addFPOD)
 export(addFunction)
 export(addGps)
 export(addHydrophoneDepth)
@@ -47,6 +48,7 @@ export(getCepstrumData)
 export(getClickData)
 export(getClipData)
 export(getDetectorData)
+export(getFPODData)
 export(getGPLData)
 export(getICI)
 export(getMeasures)
