subsampling for DJ WHALED

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(removeFunction)
 export(removeNote)
 export(removeSettings)
 export(roccaWhistleCalcs)
+export(sampleDetector)
 export(setSpecies)
 export(settings)
 export(species)
@@ -168,6 +169,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(gam,gam)
