this should be on github

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(settings)
 export(species)
 export(standardCepstrumCalcs)
 export(standardClickCalcs)
+export(timeJoin)
 export(updateFiles)
 export(updatePamObject)
 export(writeEventClips)
