adding measure code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(addFPOD)
 export(addFunction)
 export(addGps)
 export(addHydrophoneDepth)
+export(addMeasures)
 export(addNote)
 export(addRecordings)
 export(addSettings)
