longer fitls allowed for filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,8 +213,11 @@ importFrom(reticulate,py_available)
 importFrom(reticulate,py_install)
 importFrom(reticulate,py_module_available)
 importFrom(rlang,as_label)
+importFrom(rlang,is_expression)
+importFrom(rlang,is_quosure)
 importFrom(rlang,list2)
 importFrom(rlang,parse_expr)
+importFrom(rlang,quo_get_expr)
 importFrom(rlang,quos)
 importFrom(seewave,TKEO)
 importFrom(seewave,bwfilter)
