image control options for plotGram to make it more useful for detection validation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -222,7 +222,9 @@ importFrom(rlang,quos)
 importFrom(seewave,TKEO)
 importFrom(seewave,bwfilter)
 importFrom(seewave,spec)
+importFrom(signal,cheby1)
 importFrom(signal,decimate)
+importFrom(signal,filtfilt)
 importFrom(signal,hanning)
 importFrom(signal,specgram)
 importFrom(stats,approx)
