plotGram and MTC updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -244,6 +244,7 @@ importFrom(tuneR,MCnames)
 importFrom(tuneR,WaveMC)
 importFrom(tuneR,bind)
 importFrom(tuneR,downsample)
+importFrom(tuneR,nchannel)
 importFrom(tuneR,readWave)
 importFrom(tuneR,writeWave)
 importFrom(utils,.DollarNames)
