adding first dcl workshop stuff along side package changes they need

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -235,11 +235,9 @@ importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,sd)
-importFrom(stringr,str_split)
-importFrom(stringr,str_trim)
 importFrom(tcltk,tk_choose.dir)
 importFrom(tcltk,tk_choose.files)
-importFrom(tidyr,spread)
+importFrom(tidyr,pivot_wider)
 importFrom(tuneR,MCnames)
 importFrom(tuneR,WaveMC)
 importFrom(tuneR,bind)
