first batch of DCLDE 2024 dive depth functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,12 @@ export(addMeasures)
 export(addNote)
 export(addRecordings)
 export(addSettings)
+export(addWaveHeight)
 export(ancillary)
 export(applyCalibration)
 export(bindStudies)
 export(calculateAverageSpectra)
+export(calculateEchoDepth)
 export(calculateICI)
 export(checkAnnotation)
 export(checkStudy)
@@ -43,6 +45,7 @@ export(events)
 export(export_annomate)
 export(export_banter)
 export(files)
+export(filterEchoDepths)
 export(getAnnotation)
 export(getBinaryData)
 export(getCepstrumData)
@@ -88,6 +91,7 @@ export(removeFunction)
 export(removeNote)
 export(removeSettings)
 export(roccaWhistleCalcs)
+export(runDepthReview)
 export(sampleDetector)
 export(setSpecies)
 export(settings)
@@ -138,6 +142,7 @@ exportMethods(species)
 import(dplyr)
 importClassesFrom(data.table,data.table)
 importFrom(PAMmisc,addPgGps)
+importFrom(PAMmisc,findEchoTimes)
 importFrom(PAMmisc,peakTrough)
 importFrom(PAMmisc,readSpecAnno)
 importFrom(PAMmisc,squishList)
@@ -178,14 +183,28 @@ importFrom(gam,gam)
 importFrom(gam,predict.Gam)
 importFrom(gam,s)
 importFrom(geosphere,distGeo)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,hcl.colors)
+importFrom(grDevices,png)
 importFrom(graphics,axis)
 importFrom(graphics,image)
+importFrom(graphics,layout)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,par)
@@ -222,6 +241,31 @@ importFrom(rlang,quos)
 importFrom(seewave,TKEO)
 importFrom(seewave,bwfilter)
 importFrom(seewave,spec)
+importFrom(shiny,HTML)
+importFrom(shiny,actionButton)
+importFrom(shiny,brushedPoints)
+importFrom(shiny,column)
+importFrom(shiny,div)
+importFrom(shiny,fluidPage)
+importFrom(shiny,fluidRow)
+importFrom(shiny,isolate)
+importFrom(shiny,observe)
+importFrom(shiny,observeEvent)
+importFrom(shiny,onSessionEnded)
+importFrom(shiny,plotOutput)
+importFrom(shiny,radioButtons)
+importFrom(shiny,reactiveValues)
+importFrom(shiny,renderPlot)
+importFrom(shiny,runApp)
+importFrom(shiny,selectInput)
+importFrom(shiny,shinyApp)
+importFrom(shiny,showNotification)
+importFrom(shiny,sliderInput)
+importFrom(shiny,tags)
+importFrom(shiny,textInput)
+importFrom(shiny,updateSelectInput)
+importFrom(shiny,updateSliderInput)
+importFrom(signal,butter)
 importFrom(signal,cheby1)
 importFrom(signal,decimate)
 importFrom(signal,filtfilt)
