--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PAMpal
 Type: Package
 Title: Load and Process Passive Acoustic Data
-Version: 1.1.0
+Version: 1.2.0
 Authors@R: c(
   TS = person("Taiki", "Sakai", email = "taiki.sakai@noaa.gov", role = c("aut", "cre")),
   JB = person("Jay", "Barlow", role = c("ctb")),
@@ -24,7 +24,7 @@ Depends:
     dplyr
 Imports:
     PamBinaries (>= 1.3.0),
-    PAMmisc (>= 1.8.3),
+    PAMmisc (>= 1.12.0),
     tuneR,
     seewave,
     gam,
@@ -41,7 +41,8 @@ Imports:
     rlang,
     reticulate,
     lubridate,
-    geosphere
+    geosphere,
+    shiny
 RoxygenNote: 7.3.1
 Suggests: 
     testthat
