adding basic summary function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(settings)
 export(species)
 export(standardCepstrumCalcs)
 export(standardClickCalcs)
+export(summariseDiveDepth)
 export(timeJoin)
 export(updateFiles)
 export(updatePamObject)
