updating data explorer to shiny version, and some fixes for weird event problems for multiple event types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,7 +185,6 @@ importFrom(gam,predict.Gam)
 importFrom(gam,s)
 importFrom(geosphere,distGeo)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
@@ -217,7 +216,6 @@ importFrom(lubridate,int_overlaps)
 importFrom(lubridate,int_standardize)
 importFrom(lubridate,interval)
 importFrom(lubridate,parse_date_time)
-importFrom(manipulate,manipulate)
 importFrom(methods,new)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
@@ -255,6 +253,7 @@ importFrom(shiny,observeEvent)
 importFrom(shiny,onSessionEnded)
 importFrom(shiny,plotOutput)
 importFrom(shiny,radioButtons)
+importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
 importFrom(shiny,runApp)
