--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
     R (>= 3.5.0),
-    dplyr
+    dplyr (>= 1.1.1)
 Imports:
     PamBinaries (>= 1.3.0),
     PAMmisc (>= 1.12.0),
