--- a/NAMESPACE
+++ b/NAMESPACE
@@ -212,10 +212,12 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,title)
 importFrom(knitr,kable)
+importFrom(lubridate,floor_date)
 importFrom(lubridate,int_overlaps)
 importFrom(lubridate,int_standardize)
 importFrom(lubridate,interval)
 importFrom(lubridate,parse_date_time)
+importFrom(lubridate,period)
 importFrom(methods,new)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
