--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(is.AcousticStudy)
 export(is.PAMpalSettings)
 export(loadPamguardXML)
 export(localizations)
+export(mapWavFolder)
 export(markAnnotated)
 export(matchRecordingUrl)
 export(matchTimeData)
