updates for echo depth processing todo ici stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ importFrom(grDevices,gray.colors)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,png)
 importFrom(graphics,axis)
+importFrom(graphics,hist)
 importFrom(graphics,image)
 importFrom(graphics,layout)
 importFrom(graphics,legend)
