ici review funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(removeNote)
 export(removeSettings)
 export(roccaWhistleCalcs)
 export(runDepthReview)
+export(runIciReview)
 export(sampleDetector)
 export(setSpecies)
 export(settings)
@@ -212,6 +213,7 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(knitr,kable)
 importFrom(lubridate,floor_date)
@@ -251,6 +253,7 @@ importFrom(shiny,column)
 importFrom(shiny,div)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
+importFrom(shiny,icon)
 importFrom(shiny,isolate)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
@@ -265,6 +268,7 @@ importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,showNotification)
 importFrom(shiny,sliderInput)
+importFrom(shiny,stopApp)
 importFrom(shiny,tags)
 importFrom(shiny,textInput)
 importFrom(shiny,updateSelectInput)
