--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: PAMpal
 Type: Package
 Title: Load and Process Passive Acoustic Data
-Version: 1.3.1
+Version: 1.3.2
 Authors@R: c(
-  TS = person("Taiki", "Sakai", email = "taiki.sakai@noaa.gov", role = c("aut", "cre")),
+  TS = person("Taiki", "Saai", email = "taiki.sakai@noaa.gov", role = c("aut", "cre")),
   JB = person("Jay", "Barlow", role = c("ctb")),
   EG = person("Emily", "Griffiths", role = c("ctb")),
   MO = person("Michael", "Oswald", role = c("ctb")),
