future_lapply parallel processing and website updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(future.apply,future_lapply)
 importFrom(gam,gam)
 importFrom(gam,predict.Gam)
 importFrom(gam,s)
