--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PAMpal
 Type: Package
 Title: Load and Process Passive Acoustic Data
-Version: 1.3.2
+Version: 1.4.0
 Authors@R: c(
   TS = person("Taiki", "Saai", email = "taiki.sakai@noaa.gov", role = c("aut", "cre")),
   JB = person("Jay", "Barlow", role = c("ctb")),
@@ -41,7 +41,8 @@ Imports:
     reticulate,
     lubridate,
     geosphere,
-    shiny
+    shiny,
+    future.apply
 RoxygenNote: 7.3.1
 Suggests: 
     testthat
